# -----------

./: README.md
3D_uint17_Array/: CMakeLists.txt  README.md
3D_uint17_Array/lib/: 3DArray.cpp  3DArray.h  CMakeLists.txt
3D_uint17_Array/tests/: 3Darray_tests.cpp  CMakeLists.txt
Archive_ham/: CMakeLists.txt  README.md
Archive_ham/lib/: CMakeLists.txt  archive.cpp  archive.h
Archive_ham/parser/: CMakeLists.txt  parser.cpp  parser.h
Archive_ham/tests/: CMakeLists.txt  arch_tests.cpp
BMP_SandPile/: CMakeLists.txt  README.md  test.tsv
BMP_SandPile/bmp/: bmp.cpp  bmp.h
BMP_SandPile/parser/: parser.cpp  parser.h
BMP_SandPile/sandpile_model/: sandpile.cpp  sandpile.h
Best_Parser/: README.md
Best_Parser/lib/: ArgParser.cpp  ArgParser.h
Best_Parser/tests/: argparser_test.cpp
STL_container/: CMakeLists.txt  README.md
STL_container/lib/: CMakeLists.txt  DoNotDisturb_iterativny.cpp  bst.h  iterator.h
STL_container/tests/: CMakeLists.txt  (+1 more)
Sheduler/: CMakeLists.txt  README.md
Simple_Search_Engine/: CMakeLists.txt  README.md
Simple_Search_Engine/Files/: 123.txt  7gnomov.txt  Kolobok.txt  Zolushka.txt
Simple_Search_Engine/Files/gth/: 1231.txt  456.txt
Simple_Search_Engine/Index/: CMakeLists.txt  index.cpp  index.h
Simple_Search_Engine/Parser/: parser.cpp  parser.h
Simple_Search_Engine/Search/: CMakeLists.txt  search.cpp  search.h
Simple_Search_Engine/bin2/: CMakeLists.txt  main.cpp
Simple_Search_Engine/tests/: CMakeLists.txt  tests.cpp
Weather_API/: CMakeLists.txt  README.md
Weather_API/lib/: CMakeLists.txt  weather.cpp  weather.h
(+5 files in other folders)
